# dioxus_web_worker_example

./: .gitignore  Cargo.toml  README.md  build.sh  index.html
src/: agent.rs  lib.rs  main.rs
