[package]
authors = ["Timothee Baron"]
edition = "2021"
name = "dioxus_web_worker_example"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
dioxus = {git = "https://github.com/DioxusLabs/dioxus.git", branch = "master", features = ["web"]}
gloo-worker = "0.1"
js-sys = "0.3"
serde = "1"
wasm-bindgen = "0.2"
log = "0.4"