[package]
authors = ["Timothee Baron"]
edition = "2021"
name = "dioxus_web_worker_example"
version = "0.1.0"

[dependencies]
console_error_panic_hook = "0.1.7"
dioxus = {git = "https://github.com/DioxusLabs/dioxus.git", branch = "master", features = ["web"]}
gloo-utils = "0.1"
gloo-worker = "0.1"
js-sys = "0.3"
log = "0.4"
serde = "1"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"

[dependencies.web-sys]
features = [
  'HtmlHeadElement',
  'HtmlElement',
  'console',
  'MessageEvent',
  'Worker',
  'Headers',
  'Request',
  'RequestInit',
  'RequestCache',
  'RequestMode',
  'Response',
  'Window',
  'Location',
]
version = "0.3"
